# solar-backend-fastapi

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  start.sh
app/: main.py
app/clients/: __init__.py  open_ai.py  solar.py
app/core/: config.py  logger.py
app/core/errors/: error.py  handler.py
app/models/schemas/: common.py
app/routers/: __init__.py  chat.py
app/services/: chat.py  chat_service_factory.py
