[project]
name = "solar-backend-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.115.12",
    "openai==1.70.0",
    "orjson==3.10.16",
    "pre-commit==3.7.1",
    "pydantic-settings==2.8.1",
    "retry==0.9.2",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
]
